# rusty-chess

./: .gitignore  README.md  makefile
backend/: .env  Cargo.toml  Dockerfile  diesel.toml  docker-compose.yaml  makefile  migrations.Dockerfile
backend/src/: config.rs  lib.rs  main.rs
backend/src/data/: connection.rs  mod.rs  models.rs  schema.rs
backend/src/domain/: game.rs  mod.rs
backend/src/domain/chess_set/: chessboard.rs  mod.rs  piece.rs  square.rs
backend/src/domain/engine/: engine.rs  minimax.rs  mod.rs  monte_carlo_tree_search.rs  random.rs
backend/src/domain/gameplay/: commands.rs  game.rs  mod.rs  player.rs
backend/src/domain/rulebook/: check.rs  checkmate.rs  get_legal_moves.rs  helpers.rs  mod.rs
backend/src/domain/rulebook_v2/: check.rs  checkmate.rs  mod.rs  starting_position.rs
backend/src/interfaces/api/: build.rs  deserializers.rs  mod.rs  outbound_messages.rs  routes.rs  serializers.rs
backend/src/interfaces/static/: index.html
backend/src/repository/: game.rs  mod.rs
backend/src/repository/game/: diesel.rs  fake.rs  mod.rs  repo.rs
backend/src/services/: mod.rs  unit_of_work.rs
backend/src/services/games/: generate_and_play_next_move.rs  mod.rs  play_move.rs  start_game.rs
backend/src/testing/: factories.rs
backend/tests/: mod.rs
backend/tests/functional/api/: mod.rs  test_generate_and_play_next_move.rs  test_get_game_state.rs  test_get_legal_moves.rs  test_play_move.rs  test_start_game.rs
backend/tests/integration/: mod.rs
backend/tests/integration/domain/: en_passant_test.rs  game_test.rs  mod.rs
(+188 files in other folders)
